--- a/catalogo.html
+++ b/catalogo.html
@@ -8,5 +8,35 @@
 </head>
 <body>
     
+    <section class="form">
+        <h2>Contactanos</h2>
+
+        <div class="form-floating">
+            <select class="form-select" id="floatingSelectDisabled" aria-label="Floating label disabled select example" >
+            <option selected>Elegir area</option>
+            <option value="1">Atencion al cliente</option>
+            <option value="2">Proveedores</option>
+            <option value="3">RR.HH</option>
+            </select>
+            <label for="floatingSelectDisabled">Motivo</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="email" class="form-control" id="floatingInputDisabled" placeholder="name@example.com" >
+            <label for="floatingInputDisabled">Mail</label>
+        </div>
+        <div class="form-floating mb-3">
+            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextareaDisabled" ></textarea>
+            <label for="floatingTextareaDisabled">Nombre y Apellido</label>
+        </div>
+        <div class="form-floating mb-3">
+            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2Disabled" style="height: 100px"></textarea>
+            <label for="floatingTextarea2Disabled">Mensaje</label>
+        </div>
+        </section>
+       </div>
+    </div>    
+
+    </section>
+
 </body>
 </html>
