incorporando info de prueba

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Concesionaria Time</a>
+          <a class="navbar-brand" href="#">Concesionria Time</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDark" aria-controls="navbarDark" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
