--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Concesionria Time</a>
+          <a class="navbar-brand" href="#">Concesionaria Time</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDark" aria-controls="navbarDark" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -68,13 +68,16 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./img/carrusel3.jpg" class="d-block w-100" alt="auto">
+                <img src="./img/carrusel1.jpg" class="d-block w-100" alt="auto">
               </div>
               <div class="carousel-item">
                 <img src="./img/carrusel2.jpg" class="d-block w-100" alt="auto">
               </div>
               <div class="carousel-item">
-                <img src="./img/carrusel1.jpg" class="d-block w-100" alt="auto">
+                <img src="./img/carrusel3.jpg" class="d-block w-100" alt="auto">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/carrusel4.jpg" class="d-block w-100" alt="auto">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -138,7 +141,7 @@
           <em><h5>Nosotros:</h5></em>
 
             <p>
-            En concesionaria XX nos enorgullece ser el hogar de los automóviles y motocicletas clásicas más elegantes y atemporales. Sumergite en un mundo de belleza automotriz, donde la historia cobra vida a través de nuestros vehículos vintage meticulosamente seleccionados.
+            En Concesionaria Time nos enorgullece ser el hogar de los automóviles y motocicletas clásicas más elegantes y atemporales. Sumergite en un mundo de belleza automotriz, donde la historia cobra vida a través de nuestros vehículos vintage meticulosamente seleccionados.
             Cada vehículo que ofrecemos cuenta con un pasado intrigante y un encanto inigualable.
             Nuestra dedicación a la calidad, la autenticidad , la buena atencion y la satisfacción de nuestros cliente es lo que nos distingue. 
             Prepárate para vivir un viaje en el tiempo a través de la elegancia de décadas pasadas, no lo dudes mas ¡Explora nuestro inventario ahora y descubri el clásico de tus sueños!.
