--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -38,7 +38,28 @@
     </nav>
 
 
+<!-- Default dropend button -->
+<div class="btn-group dropend">
+  <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+    Dropend
+  </button>
+  <ul class="dropdown-menu">
+    <!-- Dropdown menu links -->
+  </ul>
+</div>
 
+<!-- Split dropend button -->
+<div class="btn-group dropend">
+  <button type="button" class="btn btn-secondary">
+    Split dropend
+  </button>
+  <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+    <span class="visually-hidden">Toggle Dropend</span>
+  </button>
+  <ul class="dropdown-menu">
+    <!-- Dropdown menu links -->
+  </ul>
+</div>
 
     <script src="./js/bootstrap.js"></script>
 </body>
