siguiendo con catalogo y footer

--- a/index.html
+++ b/index.html
@@ -251,31 +251,45 @@
    
 <script src="./js/bootstrap.js"></script>
 </body>
-
-<footer class="navbar navbar-expand-xl navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Concesionaria Time</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDark" aria-controls="navbarDark" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse show" id="navbarDark">
-            <ul class="navbar-nav me-auto mb-2 mb-xl-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/catalogo.html">Catalogo</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-              <button class="btn btn-outline-light" type="submit">Buscar</button>
-            </form>
-          </div>
-        </div>
-
+<footer>
+  <section class="footer">
+    <section class="links">
+      <h2>Concesionaria Time</h2>
+      <ul>
+        <li class="link_item"><a href="./index.html"> <i class='bx bx-home-alt-2'></i> Inicio</a></li>
+        <li class="link_item"><a href="./pages/catalogo.html"> <i class='bx bx-car'></i> Catalogo</a></li>
+        <li class="link_item"><a href="./pages/contacto.html"> <i class='bx bx-envelope'></i> Contacto</a></li>
+      </ul>
+    </section>
+    <section class="redes">
+      <h2>Seguinos</h2>
+      <ul>
+        <li class="link_item">
+          <a href="https://www.instagram.com/"><i class='bx bxl-instagram-alt' ></i>Instagram</a>
+        </li>
+        <li class="link_item">
+          <a href="https://www.facebook.com/"><i class='bx bxl-facebook-circle'></i>Facebook</a>
+        </li>
+        <li class="link_item">
+          <a href="https://www.youtube.com/"><i class="bx bxl-youtube"></i>Youtube</a>
+        </li>
+      </ul>
+    </section>
+    <section class="contact">
+      <h2>Contacto</h2>
+      <section class="contacto">
+        <ul>
+          <li class="link_item">Telefono: <a href="#">0800-156-TIME</a>
+          </li>
+          <li class="link_item">Mail: <a href="#">ventas@concesionariatime.com</a>
+          </li>
+        </ul>
+        
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+        <button class="btn btn-outline-light" type="submit">Buscar</button>
+      </form>
+      </section>
+    </section>
 </footer>
 </html>
