--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -61,7 +61,7 @@
   </ul>
 </div>
 
- <!-- <section class="form">
+ <section class="form">
         <h2>Contactanos</h2>
 
         <div class="form-floating">
@@ -85,7 +85,7 @@
             <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2Disabled" style="height: 100px"></textarea>
             <label for="floatingTextarea2Disabled">Mensaje</label>
         </div>
-        </section> -->
+        </section>
 
     <script src="./js/bootstrap.js"></script>
 </body>
