--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="card-body">
             <h5 class="card-title">Chevrolet Chevy</h5>
             <p class="card-text">No pierdas la oportunidad de ser el orgulloso propietario de este clásic, contáctanos hoy mismo</p>
-            <a href="./catalogo.html" class="btn btn-primary">Ver mas</a>
+            <a href="./pages/catalogo.html" class="btn btn-primary">Ver mas</a>
             </div>
         </div>
 
@@ -92,7 +92,7 @@
             <h5 class="card-title">Honda CB 500</h5>
             <p class="card-text">
                 Esta moto es un tesoro de época que puede ser tuyo. Su diseño icónico y su rendimiento sólido la hacen destacar. </p>
-            <a href="./catalogo.html" class="btn btn-primary">Ver mas</a>
+            <a href="./pages/catalogo.html" class="btn btn-primary">Ver mas</a>
             </div>
         </div>
 
@@ -103,7 +103,7 @@
             <p class="card-text">
                  
                 Esta Ford F100 es perfecta para enfrentar cualquier desafío, trabajo o en tus aventuras en carretera.</p>
-            <a href="./catalogo.html" class="btn btn-primary">Ver mas</a>
+            <a href="./pages/catalogo.html" class="btn btn-primary">Ver mas</a>
             </div>
         </div>
         </section>
