--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,13 +20,13 @@
           <div class="collapse navbar-collapse show" id="navbarDark">
             <ul class="navbar-nav me-auto mb-2 mb-xl-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./catalogo.html">Catalogo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./contacto.html">Contacto</a>
+                <a class="nav-link active" href="./contacto.html">Contacto</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -37,56 +37,93 @@
         </div>
     </nav>
 
+<img src="../img/contacto.jpg" alt="" width="100%" class="banner">
 
-<!-- Default dropend button -->
-<div class="btn-group dropend">
-  <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-    Dropend
-  </button>
-  <ul class="dropdown-menu">
-    <!-- Dropdown menu links -->
-  </ul>
-</div>
+  <div class="info">
 
-<!-- Split dropend button -->
-<div class="btn-group dropend">
-  <button type="button" class="btn btn-secondary">
-    Split dropend
-  </button>
-  <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-    <span class="visually-hidden">Toggle Dropend</span>
-  </button>
-  <ul class="dropdown-menu">
-    <!-- Dropdown menu links -->
-  </ul>
-</div>
+      <div class="ubicacion">
 
- <section class="form">
-        <h2>Contactanos</h2>
+        <h2>Horarios de atencion y 
+           nuestra ubicacion:</h2>
 
-        <div class="form-floating">
-            <select class="form-select" id="floatingSelectDisabled" aria-label="Floating label disabled select example" >
-            <option selected>Elegir area</option>
-            <option value="1">Atencion al cliente</option>
-            <option value="2">Proveedores</option>
-            <option value="3">RR.HH</option>
-            </select>
-            <label for="floatingSelectDisabled">Motivo</label>
-        </div>
-        <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInputDisabled" placeholder="name@example.com" >
-            <label for="floatingInputDisabled">Mail</label>
-        </div>
-        <div class="form-floating mb-3">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextareaDisabled" ></textarea>
-            <label for="floatingTextareaDisabled">Nombre y Apellido</label>
-        </div>
-        <div class="form-floating mb-3">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2Disabled" style="height: 100px"></textarea>
-            <label for="floatingTextarea2Disabled">Mensaje</label>
-        </div>
-        </section>
+          <h4>Lunes a viernes: 9:00 a 19:30</h4>
 
-    <script src="./js/bootstrap.js"></script>
+        <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d8359.080053362903!2d-58.724360933399595!3d-34.45514977647987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scar%20one!5e0!3m2!1ses-419!2sar!4v1699413097026!5m2!1ses-419!2sar" width="450" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+      </div>
+
+      <section class="form">
+          <h2>Contactanos</h2>
+
+          <div class="form-floating">
+              <select class="form-select" id="floatingSelectDisabled" aria-label="Floating label disabled select example" >
+              <option selected>Elegir area</option>
+              <option value="1">Atencion al cliente</option>
+              <option value="2">Proveedores</option>
+              <option value="3">RR.HH</option>
+              </select>
+              <label for="floatingSelectDisabled">Motivo</label>
+          </div>
+          <br>
+          <div class="form-floating mb-3">
+              <input type="email" class="form-control" id="floatingInputDisabled" placeholder="name@example.com" >
+              <label for="floatingInputDisabled">Mail</label>
+          </div>
+          <div class="form-floating mb-3">
+              <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextareaDisabled" ></textarea>
+              <label for="floatingTextareaDisabled">Nombre y Apellido</label>
+          </div>
+          <div class="form-floating mb-3">
+              <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2Disabled" style="height: 100px"></textarea>
+              <label for="floatingTextarea2Disabled">Mensaje</label>
+          </div>
+
+          <a href="#"><button type="button" class="btn btn-outline-primary">Enviar</button></a>
+          
+      </section>
+    </div>
+    <script src="../js/bootstrap.js"></script>
 </body>
+
+<footer>
+  <section class="footer">
+    <section class="links">
+      <h2>Concesionaria Time</h2>
+      <ul>
+        <li class="link_item"><a href="../index.html"> <i class='bx bx-home-alt-2'></i> Inicio</a></li>
+        <li class="link_item"><a href="./catalogo.html"> <i class='bx bx-car'></i> Catalogo</a></li>
+        <li class="link_item"><a href="./contacto.html"> <i class='bx bx-envelope'></i> Contacto</a></li>
+      </ul>
+    </section>
+    <section class="redes">
+      <h2>Seguinos</h2>
+      <ul>
+        <li class="link_item">
+          <a href="https://www.instagram.com/"><i class='bx bxl-instagram-alt' ></i>Instagram</a>
+        </li>
+        <li class="link_item">
+          <a href="https://www.facebook.com/"><i class='bx bxl-facebook-circle'></i>Facebook</a>
+        </li>
+        <li class="link_item">
+          <a href="https://www.youtube.com/"><i class="bx bxl-youtube"></i>Youtube</a>
+        </li>
+      </ul>
+    </section>
+    <section class="contact"> 
+      <h2>Contacto</h2>
+      <section class="contacto">
+        <ul>
+          <li class="link_item">Telefono: <a href="#">0800-156-TIME</a>
+          </li>
+          <li class="link_item">Mail: <a href="#">ventas@concesionariatime.com</a>
+          </li>
+        </ul>
+        
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+        <button class="btn btn-outline-light" type="submit">Buscar</button>
+      </form>
+      </section>
+    </section>
+</footer>
 </html>
