--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -20,10 +20,10 @@
           <div class="collapse navbar-collapse show" id="navbarDark">
             <ul class="navbar-nav me-auto mb-2 mb-xl-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./catalogo.html">Catalogo</a>
+                <a class="nav-link active" href="./catalogo.html">Catalogo</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -75,7 +75,7 @@
               <label for="tipos"><h5>Estado</h5></label> 
               <select name="tipos" id="tipos">
               
-                <option value="opcion">Elegir una opcion</option>
+              <option value="opcion">Elegir una opcion</option>
               <option value="hechoanuevo">Hecho a nuevo</option>
               <option value="Restaurado">Restaurado</option>
               <option value="Original">Original</option>
