--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,21 +43,23 @@
 
       <div class="ubicacion">
 
-        <h2>Horarios de atencion y 
-           nuestra ubicacion:</h2>
+        <h2>Horarios de atencion y nuestra ubicacion:</h2>
 
-          <h4>Lunes a viernes: 9:00 a 19:30</h4>
+        <h4><i class='bx bx-store' ></i> Lunes a viernes: 9:00 a 19:30</h4>
+        
+        <h4><i class='bx bx-map'></i> Tortuguitas, Buenos Aires, Argentina.</h4>
 
         <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d8359.080053362903!2d-58.724360933399595!3d-34.45514977647987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scar%20one!5e0!3m2!1ses-419!2sar!4v1699413097026!5m2!1ses-419!2sar" width="450" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
       </div>
 
       <section class="form">
+
           <h2>Contactanos</h2>
 
           <div class="form-floating">
               <select class="form-select" id="floatingSelectDisabled" aria-label="Floating label disabled select example" >
-              <option selected>Elegir area</option>
+              <option selected>Seleccionar area</option>
               <option value="1">Atencion al cliente</option>
               <option value="2">Proveedores</option>
               <option value="3">RR.HH</option>
