--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -93,10 +93,18 @@
       <h2>Concesionaria Time</h2>
       <ul>
         <li class="link_item"><a href="../index.html"> <i class='bx bx-home-alt-2'></i> Inicio</a></li>
+
         <li class="link_item"><a href="./catalogo.html"> <i class='bx bx-car'></i> Catalogo</a></li>
+
+        <li class="link_item"><a href="./nosotros.html"> <i class='bx bx-user'></i></i> Nosotros</a></li>
+
+        <li class="link_item"><a href="./merch.html"> <i class='bx bx-shopping-bag'></i>Merchandising</a></li>
+
         <li class="link_item"><a href="./contacto.html"> <i class='bx bx-envelope'></i> Contacto</a></li>
+
       </ul>
     </section>
+
     <section class="redes">
       <h2>Seguinos</h2>
       <ul>
@@ -111,21 +119,25 @@
         </li>
       </ul>
     </section>
-    <section class="contact"> 
+    <section class="contact">
+
       <h2>Contacto</h2>
+      
       <section class="contacto">
         <ul>
-          <li class="link_item">Telefono: <a href="#">0800-156-TIME</a>
+          <li class="link_item"> <a href="#"><i class='bx bx-phone'></i> Telefono:
+            <br>0800-156-TIME</a>
           </li>
-          <li class="link_item">Mail: <a href="#">ventas@concesionariatime.com</a>
+          <li class="link_item"> <a href="#"> 
+            <i class='bx bx-envelope' ></i> Mail: ventas@concesionariatime.com</a>
           </li>
         </ul>
         
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-        <button class="btn btn-outline-light" type="submit">Buscar</button>
-      </form>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+          <button class="btn btn-outline-light" type="submit">Buscar</button>
+        </form>
       </section>
-    </section>
+  </section>
 </footer>
 </html>
