sumando herramientas y pages

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </li>
 
         <li class="nav_item">
-          <a href="./pages/merchandising.html">Merchandising</a>
+          <a href="./pages/merch.html">Merchandising</a>
         </li>
 
         <li class="nav_item">
@@ -177,11 +177,12 @@
 
         <div class="presentacion">
 
-          <em><h5>Nosotros:</h5></em>
+          <em><h4>Nosotros:</h4></em>
 
             <p>
             En Concesionaria Time nos enorgullece ser el hogar de los automóviles y motocicletas clásicas más elegantes y atemporales. Sumergite en un mundo de belleza automotriz, donde la historia cobra vida a través de nuestros vehículos vintage meticulosamente seleccionados.
             Cada vehículo que ofrecemos cuenta con un pasado intrigante y un encanto inigualable.
+            <br>
             Nuestra dedicación a la calidad, la autenticidad , la buena atencion y la satisfacción de nuestros cliente es lo que nos distingue. 
             Prepárate para vivir un viaje en el tiempo a través de la elegancia de décadas pasadas, no lo dudes mas ¡Explora nuestro inventario ahora y descubri el clásico de tus sueños!.
             </p>
@@ -199,7 +200,7 @@
 
     <section class="experiencias">
 
-      <h5>Experiencias de nuestros clientes:</h5>
+      <h3>Experiencias de nuestros clientes:</h3>
 
       <section class="exp_container"> 
         <div class="opinion_card">
@@ -310,14 +311,21 @@
       <section class="redes">
         <h2>Seguinos</h2>
         <ul>
+
           <li class="link_item">
             <a href="https://www.instagram.com/"><i class='bx bxl-instagram-alt' ></i>Instagram</a>
           </li>
+
           <li class="link_item">
             <a href="https://www.facebook.com/"><i class='bx bxl-facebook-circle'></i>Facebook</a>
           </li>
+
           <li class="link_item">
             <a href="https://www.youtube.com/"><i class="bx bxl-youtube"></i>Youtube</a>
+          </li>
+
+          <li class="link_item">
+            <a href="https://www.google.com/maps/search/car+one/@-34.4809597,-58.6682848,12z?hl=es-419&gl=AR"><i class='bx bxs-map' ></i> Google Maps</a>
           </li>
         </ul>
       </section>
@@ -327,18 +335,19 @@
 
         <section class="contacto">
           <ul>
-            <li class="link_item"> <a href="#"><i class='bx bx-phone'></i> Telefono:
-              <br>0800-156-TIME</a>
+            <li class="link_item"> <a href="#"><i class='bx bx-phone'></i>
+              0800-156-TIME</a>
             </li>
             <li class="link_item"> <a href="#"> 
-              <i class='bx bx-envelope' ></i> Mail: ventas@concesionariatime.com</a>
+              <i class='bx bx-envelope' ></i>ventas@concesionariatime.com</a>
             </li>
+            <div class="boton_buscar">
+              <form class="form_buscar">
+                <input type="search" placeholder="Tu busqueda">
+                <button class="form_enviar">Buscar</button>
+              </form>
+            </div>
           </ul>
-          
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-            <button class="btn btn-outline-light" type="submit">Buscar</button>
-          </form>
         </section>
     </section>
   </footer>
