--- a/pages/merch.html
+++ b/pages/merch.html
@@ -4,45 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Concesionaria Time</title>
+    <!-- Meta Description -->
+    <meta name="description" content="Llevanos con vos a todos lados y tene presente en tu rutina la concesionaria lider en vehiculos vintage">
+    <!-- Metaa Keyword -->
+    <meta name="keywords" content="concesionaria, autos, motos, vintage, taller de autos, compra y venta, restauración, reliquias, Tortuguitas, Buenos Aires, Merchandising, gorra, remera, taza">
+    <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- Link Css -->
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
+    <!-- Title pagina -->
+    <title>Merchandising - Concesionaria Time</title>
 </head>
 <body>
-    <nav class="menu">
-        <input type="checkbox" id="checkbox" />
+
+  <!-- Menu hamb y nombre de proyecto -->
+  <nav class="menu">
+    <input type="checkbox" id="checkbox"/>
   
-        <div class="menu_check">
-          <label for="checkbox">
-            <i class="bx bx-menu bx-sm"></i>
-          </label>
+    <label for="checkbox">
+      <i class="bx bx-menu bx-sm"></i>
+    </label>
+ 
+    <span>Concesionaria Time</span>
   
-          <span>Concesionaria Time</span>
-        </div>
-  
-        <ul class="menu_nav">
-          <li class="nav_item">
-            <a href="../index.html">Inicio</a>
-          </li>
-  
-          <li class="nav_item">
-            <a href="./catalogo.html">Catalogo</a>
-          </li>
-  
-          <li class="nav_item">
-            <a href="./nosotros.html">Nosotros</a>
-          </li>
-  
-          <li class="nav_item">
-            <a href="./merch.html">Merchandising</a>
-          </li>
-  
-          <li class="nav_item">
-            <a href="./contacto.html">Contacto</a>
-          </li>
-        </ul>
-      </nav>
+<!--Barra de navegacion  -->
+
+    <ul class="menu_nav">
+      <li class="nav_item">
+        <a href="../index.html">Inicio</a>
+      </li>
+
+      <li class="nav_item">
+        <a href="./catalogo.html">Catalogo</a>
+      </li>
+
+      <li class="nav_item">
+        <a href="./nosotros.html">Nosotros</a>
+      </li>
+
+      <li class="nav_item">
+        <a href="./merch.html">Merchandising</a>
+      </li>
+
+      <li class="nav_item">
+        <a href="./contacto.html">Contacto</a>
+      </li>
+    </ul>
+  </nav>
 
       <header>
         <h1>Llevanos con vos a todos lados</h1>
