--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -16,6 +16,9 @@
     <!-- Title pagina -->
     <title>Catalogo - Concesionaria Time</title>
 </head>
+
+
+<!-- Inicio del body -->
 <body>
 
   <!-- Menu hamb y nombre del proyecto -->
@@ -54,13 +57,22 @@
       </li>
     </ul>
   </nav>
+
+<!-- Comienzo del header -->
+
   <header>
+
+    <!-- foto cabecera de catalogo -->
       <img src="../img/key.jpg" alt="foto recibiendo una llave" class="banner">
 
       <h1>Nuestro Catalogo</h1>
   </header>
+
+
+
   <main class="catalogo">
 
+    <!-- Barra lateral de filtros -->
 
       <section class="barra_lateral">
 
@@ -159,6 +171,8 @@
   
       </section>
       
+<!-- Seccion vehiculos en stock -->
+
       <section class="vehiculos">
         
         <div class="stock_card">
@@ -342,6 +356,8 @@
           </div>
       </section>
 
+      <!-- Barra de numeracion bts -->
+
       <div class="numeracion">  
         <nav aria-label="opciones">
           <ul class="pagination">
@@ -364,7 +380,9 @@
 
   <script src="../js/bootstrap.js"></script>
 </body>
+<!-- Fin de body -->
 
+<!-- Comienzo del footer -->
 <footer>
   <section class="footer">
     <section class="links">
@@ -427,4 +445,5 @@
       </section>
   </section>
 </footer>
+<!-- Fin del footer -->
 </html>
