empezando pag faq

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </li>
 
         <li class="nav_item">
-          <a href="./pages/merch.html">Merchandising</a>
+          <a href="./pages/faq.html">F.A.Q</a>
         </li>
 
         <li class="nav_item">
@@ -310,6 +310,7 @@
 <!-- Comienzo del footer -->
 <footer>
   <section class="footer">
+      <!-- seccion links de la pagina -->
     <section class="links">
       <h2>Concesionaria Time</h2>
       <ul>
@@ -319,13 +320,13 @@
 
         <li class="link_item"><a href="./pages/nosotros.html"> <i class='bx bx-user'></i></i> Nosotros</a></li>
 
-        <li class="link_item"><a href="./pages/merch.html"> <i class='bx bx-shopping-bag'></i>Merchandising</a></li>
+        <li class="link_item"><a href="./pages/faq.html"> <i class='bx bx-shopping-bag'></i>F.A.Q</a></li>
 
         <li class="link_item"><a href="./pages/contacto.html"> <i class='bx bx-chat'></i>Contacto</a></li>
 
       </ul>
     </section>
-
+<!-- seccion redes del proyecto -->
     <section class="redes">
       <h2>Seguinos</h2>
       <ul>
@@ -347,6 +348,9 @@
         </li>
       </ul>
     </section>
+
+<!-- seccion contacto -->
+
     <section class="contact">
 
       <h2>Contacto</h2>
