--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -49,7 +49,7 @@
       </li>
 
       <li class="nav_item">
-        <a href="./merch.html">Merchandising</a>
+        <a href="./faq.html">F.A.Q</a>
       </li>
 
       <li class="nav_item">
@@ -385,6 +385,7 @@
 <!-- Comienzo del footer -->
 <footer>
   <section class="footer">
+      <!-- seccion links de la pagina -->
     <section class="links">
       <h2>Concesionaria Time</h2>
       <ul>
@@ -394,13 +395,13 @@
 
         <li class="link_item"><a href="./nosotros.html"> <i class='bx bx-user'></i></i> Nosotros</a></li>
 
-        <li class="link_item"><a href="./merch.html"> <i class='bx bx-shopping-bag'></i>Merchandising</a></li>
+        <li class="link_item"><a href="./faq.html"> <i class='bx bx-shopping-bag'></i>F.A.Q</a></li>
 
         <li class="link_item"><a href="./contacto.html"> <i class='bx bx-chat'></i>Contacto</a></li>
 
       </ul>
     </section>
-
+<!-- seccion redes del proyecto -->
     <section class="redes">
       <h2>Seguinos</h2>
       <ul>
@@ -422,13 +423,15 @@
         </li>
       </ul>
     </section>
+
+    <!-- seccion contacto -->
     <section class="contact">
 
       <h2>Contacto</h2>
 
       <section class="contacto">
         <ul>
-          <li class="link_item"> <a href="#"><i class='bx bx-phone'></i>
+          <li class="link_items"> <a href="#"><i class='bx bx-phone'></i>
             0800-156-TIME</a>
           </li>
           <li class="link_item"> <a href="#"> 
