--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -48,7 +48,7 @@
         </li>
   
         <li class="nav_item">
-          <a href="./merch.html">Merchandising</a>
+          <a href="./faq.html">F.A.Q</a>
         </li>
   
         <li class="nav_item">
@@ -131,7 +131,7 @@
 
           <li class="link_item"><a href="./nosotros.html"> <i class='bx bx-user'></i></i> Nosotros</a></li>
 
-          <li class="link_item"><a href="./merch.html"> <i class='bx bx-shopping-bag'></i>Merchandising</a></li>
+          <li class="link_item"><a href="./faq.html"> <i class='bx bx-shopping-bag'></i>F.A.Q</a></li>
 
           <li class="link_item"><a href="./contacto.html"> <i class='bx bx-chat'></i>Contacto</a></li>
 
@@ -167,7 +167,7 @@
 
         <section class="contacto">
           <ul>
-            <li class="link_item"> <a href="#"><i class='bx bx-phone'></i>
+            <li class="link_items"> <a href="#"><i class='bx bx-phone'></i>
               0800-156-TIME</a>
             </li>
             <li class="link_item"> <a href="#"> 
