--- a/pages/faq.html
+++ b/pages/faq.html
@@ -7,14 +7,14 @@
     <!-- Meta Description -->
     <meta name="description" content="Llevanos con vos a todos lados y tene presente en tu rutina la concesionaria lider en vehiculos vintage">
     <!-- Metaa Keyword -->
-    <meta name="keywords" content="concesionaria, autos, motos, vintage, taller de autos, compra y venta, restauración, reliquias, Tortuguitas, Buenos Aires, Merchandising, gorra, remera, taza">
+    <meta name="keywords" content="concesionaria, autos, motos, vintage, taller de autos, compra y venta, restauración, reliquias, Tortuguitas, Buenos Aires, faq, preguntas frecuentes">
     <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- Link Css -->
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
     <!-- Title pagina -->
-    <title>Merchandising - Concesionaria Time</title>
+    <title>F.A.Q - Concesionaria Time</title>
 </head>
 <body>
 
@@ -44,7 +44,7 @@
       </li>
 
       <li class="nav_item">
-        <a href="./merch.html">Merchandising</a>
+        <a href="./faq.html">F.A.Q</a>
       </li>
 
       <li class="nav_item">
@@ -54,7 +54,9 @@
   </nav>
 
       <header>
-        <h1>Llevanos con vos a todos lados</h1>
+        <h1>Preguntas frecuentes</h1>
+
+        
       </header>
 </body>
 
@@ -69,7 +71,7 @@
 
         <li class="link_item"><a href="./nosotros.html"> <i class='bx bx-user'></i></i> Nosotros</a></li>
 
-        <li class="link_item"><a href="./merch.html"> <i class='bx bx-shopping-bag'></i>Merchandising</a></li>
+        <li class="link_item"><a href="./faq.html"> <i class='bx bx-shopping-bag'></i>F.A.Q</a></li>
 
         <li class="link_item"><a href="./contacto.html"> <i class='bx bx-chat'></i>Contacto</a></li>
 
