avanzando con faq

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -55,9 +55,97 @@
 
       <header>
         <h1>Preguntas frecuentes</h1>
-
-        
       </header>
+
+<!-- Seccion preguntas y respuestas -->
+
+      <section class="f_a_q">
+        <div class="accordion" id="accordionExample">
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                ¿Cuál es el proceso de compra de un vehículo vintage?
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Para adquirir un vehículo vintage, simplemente explore nuestro inventario en línea, elija el que le interese y póngase en contacto con nosotros para programar una visita. Nuestro equipo estará encantado de ayudarle con el proceso de compra y responder a cualquier pregunta que pueda tener.
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                ¿Puedo obtener financiamiento para la compra de un vehículo vintage?
+              </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Ofrecemos opciones de financiamiento para facilitar la compra de su vehículo vintage. Póngase en contacto con nuestro equipo financiero para discutir las opciones disponibles y recibir asesoramiento personalizado.
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                ¿Se realizan envíos a nivel nacional o internacional?
+              </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Sí, realizamos envíos tanto a nivel nacional como internacional. Comuníquese con nosotros para obtener información detallada sobre los costos de envío y los tiempos de entrega para su ubicación específica.
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFour">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                ¿Cómo seleccionan los vehículos para su inventario?
+              </button>
+            </h2>
+            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Nuestro equipo de expertos busca vehículos con historias únicas, condiciones excepcionales y autenticidad. Cada vehículo en nuestro inventario es seleccionado cuidadosamente para garantizar calidad y singularidad.
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFive">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                ¿Qué servicios adicionales ofrecen después de la compra?
+              </button>
+            </h2>
+            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Después de la compra, ofrecemos servicios continuos, como mantenimiento programado, asesoramiento técnico y acceso a eventos exclusivos para propietarios de vehículos vintage.
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingSix">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                ¿Ofrecen servicios de restauración y mantenimiento para vehículos vintage?
+              </button>
+            </h2>
+            <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Sí, contamos con servicios especializados de restauración y mantenimiento para mantener su vehículo vintage en óptimas condiciones. Puede ponerse en contacto con nuestro taller para obtener más información sobre los servicios disponibles.
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+      </section>
+
+
+      <script src="../js/bootstrap.js"></script>
 </body>
 
 <footer>
