probando cambios esteticos

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -63,7 +63,7 @@
   <header>
 
     <!-- foto cabecera de catalogo -->
-      <img src="../img/key.jpg" alt="foto recibiendo una llave" class="banner">
+      <img src="../img/catalogo.jpg" alt="foto recibiendo una llave" class="banner">
 
       <h1>Nuestro Catalogo</h1>
   </header>
