--- a/pages/faq.html
+++ b/pages/faq.html
@@ -54,6 +54,11 @@
   </nav>
 
       <header>
+
+        <!-- foto cabecera de faq -->
+    <img src="../img/faq.jpg" alt="mujer con computadora " class="banner">
+
+
         <h1>Preguntas frecuentes</h1>
       </header>
 
