--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -150,13 +150,14 @@
 
         <li class="link_item"><a href="./faq.html"> <i class='bx bx-shopping-bag'></i>F.A.Q</a></li>
 
-        <li class="link_item"><a href="./contacto.html"> <i class='bx bx-chat'></i>Contacto</a></li>
-
+        <li class="link_item"><a href="./contacto.html"> <i class='bx bx-chat'></i>Contacto</a>
+        </li>
       </ul>
     </section>
 <!-- seccion redes del proyecto -->
     <section class="redes">
       <h2>Seguinos</h2>
+
       <ul>
 
         <li class="link_item">
@@ -189,6 +190,7 @@
           <li class="link_item"> <a href="#"> 
             <i class='bx bx-envelope' ></i>ventas@concesionariatime.com</a>
           </li>
+          
           <div class="boton_buscar">
             <form class="form_buscar">
               <input type="search" placeholder="Tu busqueda">
