--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -62,7 +62,7 @@
     <header>
 
         <!-- foto cabecera de nosotros -->
-      <img src="../img/nosotros4.jpg" alt="foto de taller con dos vehiculos en restauración" width="100%">
+      <img src="../img/nosotros.jpg" alt="foto de taller con dos vehiculos en restauración" width="100%">
 
       <h1 class="nosotros_bienvenida">
         ¡Bienvenido a Concesionaria Time!</h1>
@@ -95,7 +95,7 @@
           <ul class="img_grupo">
             
             <li class="img_foto">
-              <img src="../img/nosotros.jpg" alt="hombre trabajando con un motor de moto">
+              <img src="../img/nosotros1.jpg" alt="hombre trabajando con un motor de moto">
               
             </li>
 
