--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
         <li class="link_item"><a href="./pages/nosotros.html"> <i class='bx bx-user'></i></i> Nosotros</a></li>
 
-        <li class="link_item"><a href="./pages/faq.html"> <i class='bx bx-shopping-bag'></i>F.A.Q</a></li>
+        <li class="link_item"><a href="./pages/faq.html"> <i class='bx bx-info-circle' ></i>F.A.Q</a></li>
 
         <li class="link_item"><a href="./pages/contacto.html"> <i class='bx bx-chat'></i>Contacto</a></li>
 
