--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -397,7 +397,7 @@
 
         <li class="link_item"><a href="./catalogo.html"> <i class='bx bx-car'></i> Catalogo</a></li>
 
-        <li class="link_item"><a href="./nosotros.html"> <i class='bx bx-user'></i></i> Nosotros</a></li>
+        <li class="link_item"><a href="./nosotros.html"> <i class='bx bx-info-circle' ></i> Nosotros</a></li>
 
         <li class="link_item"><a href="./faq.html"> <i class='bx bx-shopping-bag'></i>F.A.Q</a></li>
 
