--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -131,7 +131,7 @@
 
           <li class="link_item"><a href="./nosotros.html"> <i class='bx bx-user'></i></i> Nosotros</a></li>
 
-          <li class="link_item"><a href="./faq.html"> <i class='bx bx-shopping-bag'></i>F.A.Q</a></li>
+          <li class="link_item"><a href="./faq.html"> <i class='bx bx-info-circle' ></i>F.A.Q</a></li>
 
           <li class="link_item"><a href="./contacto.html"> <i class='bx bx-chat'></i>Contacto</a></li>
 
