agregando icono, animaciones y demas

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -8,8 +8,15 @@
     <meta name="description" content="Llevanos con vos a todos lados y tene presente en tu rutina la concesionaria lider en vehiculos vintage">
     <!-- Metaa Keyword -->
     <meta name="keywords" content="concesionaria, autos, motos, vintage, taller de autos, compra y venta, restauración, reliquias, Tortuguitas, Buenos Aires, faq, preguntas frecuentes">
+  
+    <!-- Icono -->
+    <link rel="shortcut icon" href="../img/icono.ico" type="image/x-icon">
     <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- Animacion -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- Link Css -->
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -25,8 +32,8 @@
     <label for="checkbox">
       <i class="bx bx-menu bx-sm"></i>
     </label>
- 
-    <span>Concesionaria Time</span>
+
+    <span class="animate__animated animate__wobble">Concesionaria Time</span>
   
 <!--Barra de navegacion  -->
 
@@ -144,8 +151,6 @@
               </div>
             </div>
           </div>
-
-
         </div>
       </section>
 
@@ -153,8 +158,16 @@
       <script src="../js/bootstrap.js"></script>
 </body>
 
+
+<!-- Fin de body -->
+
+<!-- Comienzo del footer -->
+
 <footer>
-  <section class="footer">
+
+    <!-- seccion links de la pagina -->
+  
+    <section class="footer">
     <section class="links">
       <h2>Concesionaria Time</h2>
       <ul>
@@ -170,6 +183,8 @@
 
       </ul>
     </section>
+
+<!-- Seccion redes del proyecto -->
 
     <section class="redes">
       <h2>Seguinos</h2>
@@ -192,18 +207,21 @@
         </li>
       </ul>
     </section>
-    <section class="contact">
+    
+    <!-- seccion contacto -->
+
+    <section class="contacto">
 
       <h2>Contacto</h2>
 
-      <section class="contacto">
         <ul>
-          <li class="link_item"> <a href="#"><i class='bx bx-phone'></i>
+          <li class="link_items"> <a href="#"><i class='bx bx-phone'></i>
             0800-156-TIME</a>
           </li>
           <li class="link_item"> <a href="#"> 
             <i class='bx bx-envelope' ></i>ventas@concesionariatime.com</a>
           </li>
+
           <div class="boton_buscar">
             <form class="form_buscar">
               <input type="search" placeholder="Tu busqueda">
@@ -212,6 +230,5 @@
           </div>
         </ul>
       </section>
-  </section>
 </footer>
 </html>
