--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,10 +8,16 @@
      <meta name="description" content="Conoce nuestra historia para entender el recorrido que tuvimos hasta poder traerte los mejores vehiculos">
      <!-- Metaa Keyword -->
     <meta name="keywords" content="concesionaria, autos, motos, vintage, taller de autos, compra y venta, restauración, reliquias, Tortuguitas, Buenos Aires, historia, nosotros, about us">
+    <!-- Icono -->
+    <link rel="shortcut icon" href="../img/icono.ico" type="image/x-icon">
     <!-- Boxicons -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"/>
+      <!-- Animacion -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
       <!-- Link Css -->
     <link rel="stylesheet" href="../css/bootstrap.css" />
     <link rel="stylesheet" href="../css/style.css" />
@@ -30,7 +36,7 @@
           <i class="bx bx-menu bx-sm"></i>
         </label>
      
-        <span>Concesionaria Time</span>
+        <span class="animate__animated animate__wobble">Concesionaria Time</span>
       
         <!-- Barra de navegacion -->
   
@@ -160,28 +166,28 @@
         </ul>
       </section>
 
-       <!-- seccion contacto -->
-      <section class="contact">
+      <!-- seccion contacto -->
 
-        <h2>Contacto</h2>
+    <section class="contacto">
 
-        <section class="contacto">
-          <ul>
-            <li class="link_items"> <a href="#"><i class='bx bx-phone'></i>
-              0800-156-TIME</a>
-            </li>
-            <li class="link_item"> <a href="#"> 
-              <i class='bx bx-envelope' ></i>ventas@concesionariatime.com</a>
-            </li>
-            <div class="boton_buscar">
-              <form class="form_buscar">
-                <input type="search" placeholder="Tu busqueda">
-                <button class="form_enviar">Buscar</button>
-              </form>
-            </div>
-          </ul>
-        </section>
-    </section>
+      <h2>Contacto</h2>
+
+        <ul>
+          <li class="link_items"> <a href="#"><i class='bx bx-phone'></i>
+            0800-156-TIME</a>
+          </li>
+          <li class="link_item"> <a href="#"> 
+            <i class='bx bx-envelope' ></i>ventas@concesionariatime.com</a>
+          </li>
+
+          <div class="boton_buscar">
+            <form class="form_buscar">
+              <input type="search" placeholder="Tu busqueda">
+              <button class="form_enviar">Buscar</button>
+            </form>
+          </div>
+        </ul>
+      </section>
   </footer>
   
 <!-- Fin del footer -->
