--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,8 +8,14 @@
     <meta name="description" content="Contactanos que de seguro vamos a poder asesorarte para que te hagas con el vehiculo que siempre soñaste">
     <!-- Metaa Keyword -->
     <meta name="keywords" content="concesionaria, autos, motos, vintage, taller de autos, compra y venta, restauración, reliquias, Tortuguitas, Buenos Aires, contacto, formulario, RR HH, Proveedores">
+    <!-- Icono -->
+    <link rel="shortcut icon" href="../img/icono.ico" type="image/x-icon">
     <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- Animacion -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- Link Css -->
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -31,7 +37,7 @@
           <i class="bx bx-menu bx-sm"></i>
         </label>
      
-        <span>Concesionaria Time</span>
+        <span class="animate__animated animate__wobble">Concesionaria Time</span>
       
    <!-- Barra de navegacion -->
 
@@ -117,7 +123,7 @@
               <label for="floatingTextarea2Disabled">Mensaje</label>
           </div>
 
-          <!-- Boton ver mas que dirigue a catalogo -->
+          <!-- Boton enviar -->
       <div class="stock_boton">
         <a href="./pages/catalogo.html">
           <button class="form_enviar">Enviar</button>
@@ -178,11 +184,11 @@
       </ul>
     </section>
        <!-- seccion contacto -->
-    <section class="contact">
+
+    <section class="contacto">
 
       <h2>Contacto</h2>
 
-      <section class="contacto">
         <ul>
           <li class="link_items"> <a href="#"><i class='bx bx-phone'></i>
             0800-156-TIME</a>
@@ -190,6 +196,7 @@
           <li class="link_item"> <a href="#"> 
             <i class='bx bx-envelope' ></i>ventas@concesionariatime.com</a>
           </li>
+
           <div class="boton_buscar">
             <form class="form_buscar">
               <input type="search" placeholder="Tu busqueda">
@@ -198,7 +205,6 @@
           </div>
         </ul>
       </section>
-  </section>
 </footer>
 
 <!-- Fin del footer -->
